# ItzEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  readme.md
app/: CMakeLists.txt
app/src/: main.cpp
src/ItzEngine/: ItzEngine.h  Window.cpp  Window.h
